--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -14,7 +14,6 @@
     tools:showIn="@layout/main_app_bar">
 
     <android.support.v4.widget.SwipeRefreshLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swipeContainer"
         android:layout_width="match_parent"
         android:layout_height="197dp">
@@ -197,6 +196,7 @@
     </android.support.v4.widget.SwipeRefreshLayout>
 
     <EditText
+        android:importantForAutofill="no"
         android:id="@+id/subjectText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -208,6 +208,7 @@
         android:layout_marginTop="10dp" />
 
     <EditText
+        android:importantForAutofill="no"
         android:id="@+id/messageText"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
