Enhancement: Layout main.xml changed twitter and phone icons

--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -50,17 +50,19 @@
                 <ImageButton
                     android:id="@+id/webButton1_1"
                     android:adjustViewBounds="true"
+                    android:background="@android:color/background_light"
                     android:maxWidth="55dp"
                     android:maxHeight="55dp"
-                    android:src="@drawable/twitter_logo_blue_32x32"
+                    android:src="@drawable/twitter_logo_high_res2_32x32"
                     tools:ignore="ContentDescription" />
 
                 <ImageButton
                     android:id="@+id/phoneButton1_1"
                     android:adjustViewBounds="true"
+                    android:background="#FFFFFF"
                     android:maxWidth="55dp"
                     android:maxHeight="55dp"
-                    android:src="@drawable/phone_logo_red_32x32"
+                    android:src="@drawable/phone_logo_high_res2_32x32"
                     tools:ignore="ContentDescription" />
             </TableRow>
 
@@ -81,17 +83,19 @@
                 <ImageButton
                     android:id="@+id/webButton1_2"
                     android:adjustViewBounds="true"
+                    android:background="#FFFFFF"
                     android:maxWidth="48dp"
                     android:maxHeight="48dp"
-                    android:src="@drawable/twitter_logo_blue_32x32"
+                    android:src="@drawable/twitter_logo_high_res2_32x32"
                     tools:ignore="ContentDescription" />
 
                 <ImageButton
                     android:id="@+id/phoneButton1_2"
                     android:adjustViewBounds="true"
+                    android:background="#FFFFFF"
                     android:maxWidth="48dp"
                     android:maxHeight="48dp"
-                    android:src="@drawable/phone_logo_red_32x32"
+                    android:src="@drawable/phone_logo_high_res2_32x32"
                     tools:ignore="ContentDescription" />
             </TableRow>
 
@@ -112,17 +116,19 @@
                 <ImageButton
                     android:id="@+id/webButton1_3"
                     android:adjustViewBounds="true"
+                    android:background="#FFFFFF"
                     android:maxWidth="48dp"
                     android:maxHeight="48dp"
-                    android:src="@drawable/twitter_logo_blue_32x32"
+                    android:src="@drawable/twitter_logo_high_res2_32x32"
                     tools:ignore="ContentDescription" />
 
                 <ImageButton
                     android:id="@+id/phoneButton1_3"
                     android:adjustViewBounds="true"
+                    android:background="#FFFFFF"
                     android:maxWidth="48dp"
                     android:maxHeight="48dp"
-                    android:src="@drawable/phone_logo_red_32x32"
+                    android:src="@drawable/phone_logo_high_res2_32x32"
                     tools:ignore="ContentDescription" />
             </TableRow>
 
@@ -145,17 +151,19 @@
                 <ImageButton
                     android:id="@+id/webButton1_4"
                     android:adjustViewBounds="true"
+                    android:background="#FFFFFF"
                     android:maxWidth="48dp"
                     android:maxHeight="48dp"
-                    android:src="@drawable/twitter_logo_blue_32x32"
+                    android:src="@drawable/twitter_logo_high_res2_32x32"
                     tools:ignore="ContentDescription" />
 
                 <ImageButton
                     android:id="@+id/phoneButton1_4"
                     android:adjustViewBounds="true"
+                    android:background="#FFFFFF"
                     android:maxWidth="48dp"
                     android:maxHeight="48dp"
-                    android:src="@drawable/phone_logo_red_32x32"
+                    android:src="@drawable/phone_logo_high_res2_32x32"
                     tools:ignore="ContentDescription" />
             </TableRow>
 
@@ -179,7 +187,7 @@
                     android:adjustViewBounds="true"
                     android:maxWidth="48dp"
                     android:maxHeight="48dp"
-                    android:src="@drawable/twitter_logo_blue_32x32"
+                    android:src="@drawable/twitter_logo_high_res2_32x32"
                     tools:ignore="ContentDescription" />
 
                 <ImageButton
@@ -187,7 +195,7 @@
                     android:adjustViewBounds="true"
                     android:maxWidth="48dp"
                     android:maxHeight="48dp"
-                    android:src="@drawable/phone_logo_red_32x32"
+                    android:src="@drawable/phone_logo_high_res2_32x32"
                     tools:ignore="ContentDescription" />
             </TableRow>
         </TableLayout>
